整理toolbox積木文字排版，處理孤兒積木。

--- a/backup/details_20260208_133737.md
+++ b/backup/details_20260208_133737.md
@@ -1,4 +1,4 @@
-開發過程遇到的問題與解決方法、關鍵技術細節（踩過的坑）
+﻿開發過程遇到的問題與解決方法、關鍵技術細節（踩過的坑）
 
  * Java 字串比較：logic_compare 已修正，偵測到字串時必須產生 .equals() 而非 ==。
  * Minim 混音：多個音源必須先 patch 到 Summer 物件，再 patch 到 ADSR，否則只有最後一個音源有聲。
@@ -143,26 +143,3 @@
 
 ### 5. 擴充功能樣板與狀態同步
 - **技術點**：VS Code Webview 載入 XML 後預設會重置 `isDirty`。若想讓預設樣板顯示為「未儲存」，必須在 `initializeWorkspace` 訊息中帶入 `isTemplate` 標記，並在前端手動設定 `isDirty = true`。
-
-# 2026-02-08 技術細節：UI 排版革命與效能極限優化
-
-### 1. 原子化翻譯鍵值 (Atomic Translation Keys)
-- **坑點**：使用 `.split('%1')` 手動切割長字串標籤雖然靈活，但極度依賴語序，且在翻譯變動時容易崩潰。
-- **對策**：全面重構語言檔，將單一訊息拆分為 `_INST`, `_PITCH`, `_VEL` 等獨立標籤。
-- **優勢**：積木定義改為直接引用這些原子鍵值，徹底解決了多語系對齊問題，並支援更穩健的橫向/縱向排版切換。
-
-### 2. 外科手術式積木更新 (Surgical Updates)
-- **技術點**：孤兒積木檢查 (`updateOrphanBlocks`) 若每次都全量重設狀態，會引發大量 DOM 變動導致畫面閃爍與 Lag。
-- **實作**：引入 `hasDisabledReason('orphan')` 比對。只有在積木「當前狀態」與「計算後的目標狀態」不符時，才呼叫 `setDisabledReason`。這將 UI 刷新負擔降到了最低。
-
-### 3. 拖曳中的「邏輯禁飛區」 (Drag-Skip Policy)
-- **問題**：拖曳積木時，Blockly 每秒會發送數十次 `BLOCK_MOVE` 事件。若在這些事件中執行按鍵衝突或孤兒檢查，會卡住主執行緒，導致垃圾桶掀蓋動畫卡頓。
-- **方案**：在監聽器頂端加入 `if (workspace.isDragging()) return;`。所有邏輯檢查統一移入 `setTimeout` 防抖計時器（100ms），確保使用者「放下積木」後才進行運算。
-
-### 4. 雙模音高輸入 (Hybrid Pitch Input)
-- **細節**：為了同時支援 MIDI 數字與音名，插槽類型設為 `['Number', 'String']`。
-- **轉型機制**：在 `_core.js` 實作 `getMidi(Object o)`。Java 端會判斷輸入是否為 `Number`，若非則視為字串並呼叫 `noteToMidi()`。這統一了編曲類與演奏類積木的輸入規範。
-
-### 5. 手勢競爭保護 (Gesture Race Condition Fix)
-- **問題**：視窗失去焦點 (blur) 時立即清除手勢，可能與當前正在進行的微任務衝突，報 `Tried to start the same gesture twice`。
-- **修正**：將 `clearForced()` 包裹在 10 毫秒的 `setTimeout` 中，並配合 `try-catch`。這給予了事件迴圈足夠的緩衝時間來完成當前手勢的銷毀流程。
